--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div id="app"></div>
     <img src="" alt="" />
+
+    <h1>HERE WE GO NETLIFY</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
